<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_8dp"
            android:paddingBottom="@dimen/default_8dp"
            android:text="赛事"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/topMenuButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_4dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/default_4dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_sort_by_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/topBackButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/default_4dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/default_4dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_revert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topConstraintLayout">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mainConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TabItem
                    android:id="@+id/eventNewsTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_news" />

                <android.support.design.widget.TabItem
                    android:id="@+id/recentEventTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_event" />

                <android.support.design.widget.TabItem
                    android:id="@+id/historicalEventTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historical_event" />

                <android.support.design.widget.TabItem
                    android:id="@+id/shooterListTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shooter_list" />

                <android.support.design.widget.TabItem
                    android:id="@+id/rankingListTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking_list" />

            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/menuConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimary">

            <ExpandableListView
                android:id="@+id/expandListView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>